--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,22 @@
 body {
   background-color: grey;
 }
+
+img#bgHAL {
+  position: absolute;
+  z-index: -1;
+}
+
+.fit {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.center {
+  display: block;
+  margin: auto;
+}
+
+#outputHAL {
+  color: white;
+}
